# agent_tools

./: .gitignore  AGENTS.md  README.md  conftest.py  noxfile.py  pytest.ini
mail_mcp/: README.md  mail_mcp_server_design.md  pyproject.toml
mail_mcp/docs/: architecture.md  config.md  errors.md  overview.md
mail_mcp/docs/adr/: README.md
mail_mcp/docs/tools/: imap_extension.md  list_accounts.md  send_email.md
mail_mcp/src/: README.md
mail_mcp/src/mail_mcp/: __init__.py  app.py  config.py  main.py
mail_mcp/src/mail_mcp/conf/: __init__.py  config.yaml
mail_mcp/tests/unit/: test_app.py  test_config.py  test_main.py
mailgateway_mcp/: README.md  __init__.py  noxfile.py  pyproject.toml
mailgateway_mcp/deploy/: README.md  compose.yaml  config.yaml  mailgateway.env.example
mailgateway_mcp/docs/: architecture.md  combine-docs.sh  config.md  errors.md  overview.md  policies.md  testing_backlog.md  todo.md
mailgateway_mcp/docs/adr/: README.md
mailgateway_mcp/docs/openclaw-integration/: README.md  send-email-skills.md  wrapper-skill-decision.md
mailgateway_mcp/docs/tools/: imap_extension.md  list_accounts.md  send_email.md
mailgateway_mcp/openclaw_skills/: README.md  install-openclaw-skills.sh
mailgateway_mcp/openclaw_skills/_shared/scripts/: mailgateway_mcp_client.py
mailgateway_mcp/openclaw_skills/send-email-interactive/: SKILL.md
mailgateway_mcp/openclaw_skills/send-email-interactive/scripts/: send_email_interactive.py
mailgateway_mcp/openclaw_skills/send-email-predefined/: SKILL.md  template-operator-readme.md  templates.json
mailgateway_mcp/openclaw_skills/send-email-predefined/references/: template-config.md
mailgateway_mcp/openclaw_skills/send-email-predefined/scripts/: send_email_predefined.py
mailgateway_mcp/src/mailgateway_mcp/: __init__.py  app.py  config.py  main.py  smtp.py
mailgateway_mcp/src/mailgateway_mcp/conf/: __init__.py  config.yaml
mailgateway_mcp/tests/integration/: test_smtp_integration.py
mailgateway_mcp/tests/unit/: test_app.py  test_config.py  test_main.py  test_openclaw_skill_scripts.py  test_smtp.py
mcp_server_template/: README.md  pyproject.toml
mcp_server_template/docs/: architecture.md  config.md
mcp_server_template/src/mcp_server/: __init__.py  app.py  config.py  main.py
mcp_server_template/src/mcp_server/conf/: config.yaml
mcp_server_template/tests/unit/: test_main.py
templates/mcp_server/: README.md  pyproject.toml
templates/mcp_server/docs/: errors.md  overview.md  policies.md
templates/mcp_server/docs/adr/: 0000-decision-template.md
templates/mcp_server/docs/tools/: tool_template.md
templates/mcp_server/src/: README.md
templates/mcp_server/src/mcp_server/: config.py
templates/mcp_server/src/mcp_server/conf/: config.yaml
templates/mcp_server/tests/: README.md
templates/mcp_server/tests/unit/: test_app.py  test_config.py
