[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailgateway-mcp"
version = "0.1.1.dev1"
description = "Mail gateway MCP server implementation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
maintainers = [
  { name = "Omry Yadan", email = "omry@yadan.net" },
]
keywords = ["email", "mcp", "mail", "smtp", "openclaw"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "hydra-core>=1.3,<2.0",
  "mcp>=1.9.4,<2.0",
]

[project.urls]
Homepage = "https://github.com/omry/agent_tools"
Repository = "https://github.com/omry/agent_tools"

[project.optional-dependencies]
dev = [
  "aiosmtpd>=1.4.6,<2.0",
  "pytest>=7.4,<9.0",
  "trustme>=1.2,<2.0",
]

[project.scripts]
mailgateway-mcp = "mailgateway_mcp.main:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mailgateway_mcp.conf" = ["*.yaml"]
